--- a/index.html
+++ b/index.html
@@ -5,16 +5,39 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Hassan Khan</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h3>CWA Army</h3>
-<p>CWA army is one of the best tech community.</p>
-<p>And also one of the best in the world.
-We work together . Learn together . Move together.</p>
-<img width="500" height="300" src="https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-deve-picture-id537331500?b=1&k=20&m=537331500&s=170667a&w=0&h=-OawbbTR9TwfewLYKlaU-_cn1m_dq1WLpBK1qubFhGI=">
- <p style="color:blue ;">If you want to connect with me , go to my : 
-    <div>
-        <a style="color:black; text-decoration: none;" target="_blank" href="https://www.facebook.com/profile.php?id=100035242177231">hassankhan</a></div>
-</p>
+        <h1>Blog</h1>
+      <article class="blog-item">
+        <header> 
+                <h3>UI Interection of the week.</h3>
+        </header>
+       <div><span class="published-date">12 Feb 2019</span>  | <span class="category">Express , Handlebars</span></div>
+        <p>Ammit minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+      </article>
+      <article class="blog-item">
+        <header> 
+                <h3>UI Interection of the week.</h3>
+        </header>
+        <div><span class="published-date">12 Feb 2019</span>  | <span class="category">Express , Handlebars</span></div>
+        <p>Ammit minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+      </article>
+      <article class="blog-item">
+        <header> 
+                <h3>UI Interection of the week.</h3>
+        </header>
+        <div><span class="published-date">12 Feb 2019</span>  | <span class="category">Express , Handlebars</span></div>
+        <p>Ammit minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+      </article>
+<h2>
+Google Chrome
+</h2>
+<p>
+ Google chrome is a web browser developed by google.released in 2008.Chrome is world's most popular browser today.
+ </p>
 </body>
 </html>
